tests/ui/discord-frontend/command_macro/expected_literal_5.stderr
error: expected literal
  --> tests/ui/discord-frontend/command_macro/expected_literal_5.rs:33:24
   |
LL |     interaction_only = core,
   |                        ^^^^

error: aborting due to 1 previous error

